--- a/style_modelo.css
+++ b/style_modelo.css
@@ -395,10 +395,10 @@ a{
         padding: 0;
     }
     .div-conteudo h2{
-        font-size: 20px;
+        font-size: 25px;
     }
     .div-conteudo p{
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
 
     #logo{
@@ -412,12 +412,12 @@ a{
         height: 3vh;
         border-radius: 8px;
         width: 50%;
-        font-size: 0.4rem;
+        font-size: 0.5rem;
     }
 
     #primeiro-bloco{
         width: 100%;
-        height: 50vh;
+        height: 70vh;
         background-image: url(./imagens_modelo/background.png);
         background-size: cover;
         background-position: 0;
@@ -474,7 +474,7 @@ a{
     #div-segmento-img{
         display: flex;
         flex-direction: row;
-        width: 77%;
+        width: 85%;
         align-items: center;
         gap: 5%;
         margin: 0;
@@ -490,7 +490,7 @@ a{
         margin-left: 8%;
     } */
     #div-h3{
-        width: 80%;
+        width: 85%;
         margin: 0;
         font-size: 1rem;
         display: flex;
@@ -512,7 +512,7 @@ a{
     }
     
     .formatacao-div img{
-        width: 40%;
+        width: 50%;
     }
     /* .formatacao-div img{
         width: 40%;
@@ -533,10 +533,11 @@ a{
 
     .div-btn-bloco2{
         width: 80%;
+        padding-bottom: 5%;
     }
 
     .div-btn-bloco2 button{
-        background-color: #23254D;
+        background-color: #ffde59;
         color: white;
         border: 0px;
         height: 3vh;
@@ -572,7 +573,6 @@ a{
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        background-image: url(./imagens_modelo/ilustracao-de-galeria-icone.png);
         background-repeat: no-repeat;
         background-position: 100%;
         background-size: 50%;
@@ -618,8 +618,8 @@ a{
     }
 
     .div-btn-bloco3 button{
-        background-color: #333CDF;
-        color: white;
+        background-color: white;
+        color: black;
         border: 0px;
         height: 3vh;
         border-radius: 8px;
@@ -667,12 +667,12 @@ a{
     }
 
     #div-footer2 img{
-        width: 14px;
-        height: 14px;
+        width: 20px;
+        height: 20px;
     }
 
     #div-footer-info-contato p{
-        font-size: 1.5vw;
+        font-size: 2vw;
     }
 
     .div-row{
@@ -684,7 +684,7 @@ a{
         justify-content: center;
         align-items: center;
         flex-direction: row;
-        width: 100%;
+        width: 50%;
         gap: 1px;
     }
   
